<resources>
    <string name="app_name">My Midterm</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="anil_coklar">Anil Coklar</string>
    <string name="my_address">Portland, OR</string>
    <string name="_666k">666K</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="email">Email</string>
    <string name="anil_coklar_oit_edu">anil.coklar@oit.edu</string>
    <string name="phone">Phone</string>
    <string name="_1_503_123_4567">+1-503-123-4567</string>
    <string name="twitter">Twitter</string>
    <string name="twitterUsername">"I don't have a twitter"</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_com_ani">facebook.com/ani</string>
    <string name="title_activity_maps2">Map</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_your_phone_number_here">Enter your phone number here</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="guest_name">Guest Name</string>
    <string name="comments">Comments</string>
    <string name="enter_your_comments_here">Enter your comments here</string>
    <string name="confirmation_page">Confirmation Page</string>
    <string name="guest_book_details">Guest Book Details</string>
    <string name="submit">Submit</string>
    <string name="favorite_shows">Favorite Shows</string>

</resources>
