<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/stars"
    tools:context=".GuestBook">

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/headings"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/guest_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_here"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/headings"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/guest_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number_here"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/guest_name"
            android:textColor="@color/headings"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/guest_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name_here"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/headings"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/guest_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif-light"
            android:hint="@string/enter_your_comments_here"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey"/>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"/>
</LinearLayout>
</LinearLayout>
